MCP: Feature description review comments

--- a/dev/com.ibm.websphere.appserver.features/visibility/public/mcp-1.0/resources/l10n/io.openliberty.mcp-1.0.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/mcp-1.0/resources/l10n/io.openliberty.mcp-1.0.properties
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Adds support for the Model Context Protocol (MCP). Tools, Resources and Prompts can be defined in Java code and exposed to AI systems using MCP.
+description=Adds support for the Model Context Protocol (MCP). Tools, resources, and prompts can be defined in Java code and exposed to AI systems using MCP.
