add ECDSAwithSHA256 signatureMethodAlgorithm support

--- a/dev/com.ibm.ws.security.saml.websso.2.0/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.saml.websso.2.0/resources/OSGI-INF/l10n/metatype.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2021,2022 IBM Corporation and others.
+# Copyright (c) 2021,2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -26,8 +26,9 @@ wantAssertionsSigned.desc=Indicates a requirement for the <saml:Assertion> eleme
 signatureMethodAlgorithm=Signature algorithm
 signatureMethodAlgorithm.desc=Indicates the required algorithm by this service provider.
 
-signatureMethodAlgorithm.SHA1=SHA-1 signature algorithm
-signatureMethodAlgorithm.SHA256=SHA-256 signature algorithm
+signatureMethodAlgorithm.SHA1=RSA with SHA-1 signature algorithm
+signatureMethodAlgorithm.SHA256=RSA with SHA-256 signature algorithm
+signatureMethodAlgorithm.ECDSAwithSHA256=ECDSA with SHA-256 signature algorithm
 
 authnRequestsSigned=Sign the samlp:AuthnRequest messages
 authnRequestsSigned.desc=Indicates whether the <samlp:AuthnRequest> messages sent by this service provider will be signed.
