--- a/dev/com.ibm.ws.transaction/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.transaction/resources/OSGI-INF/l10n/metatype.properties
@@ -37,7 +37,7 @@ OnePCOptimization.desc=Specifies whether the transaction manager optimizes when 
 ut.as.specified=Enable UserTransaction in @Transactional methods
 ut.as.specified.desc=Specifies whether UserTransaction methods should be enabled in NOT_SUPPORTED and NEVER @Transactional annotated methods.
 
-correct.uowscope.callbacks=Enable calling UOWScopeCallback methods for UOWScope END events
+correct.uowscope.callbacks=Enable UOWScopeCallbacks for UOWScope END events
 correct.uowscope.callbacks.desc=Specifies whether UOWScopeCallback methods should be called for UOWScope END events.
 
 recover.on.startup=Recover on startup
