--- a/dev/com.ibm.ws.classloading/resources/OSGI-INF/l10n/classloader.properties
+++ b/dev/com.ibm.ws.classloading/resources/OSGI-INF/l10n/classloader.properties
@@ -32,7 +32,7 @@ classloader.library.ref.desc=List of library references. Library class instances
 
 # Override libraryRefs
 classloader.override.library.ref=Override Library
-classloader.override.library.ref$Ref=Override Library references
+classloader.override.library.ref$Ref=Override library references
 classloader.override.library.ref.desc=List of library references. Library class instances are unique to this class loader, independent of class instances from other class loaders. The referenced library class path is searched before searching the class path of this class loader.
 
 classloader.common.library.ref=Shared Library
