--- a/dev/com.ibm.ws.security.authentication.builtin/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.authentication.builtin/resources/OSGI-INF/l10n/metatype.properties
@@ -34,7 +34,7 @@ useDisplayNameForSecurityName=Use displayName as securityName in customUR
 useDisplayNameForSecurityName.desc=Specifies whether to return displayName for programmatic APIs like getRemoteUser, getCallerPrincipal, getUserPrincipal when using Custom User Registry.
 
 ignoreCustomCacheKey=Ignore custom cache key in LtpaToken2 cookie
-ignoreCustomCacheKey.desc=Specifies whether to ignore custom cache key when looking up the authentication cache. 
+ignoreCustomCacheKey.desc=Specifies whether to ignore the custom cache key that is used when looking up the authentication cache.
 
 
 # ======= AUTH CACHE =======
