--- a/dev/com.ibm.ws.security.authentication.builtin/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.authentication.builtin/resources/OSGI-INF/l10n/metatype.properties
@@ -33,7 +33,7 @@ fillInGroupInformationForHashtableLogin.desc=Specifies whether the group informa
 useDisplayNameForSecurityName=Use displayName as securityName in customUR
 useDisplayNameForSecurityName.desc=Specifies whether to return displayName for programmatic APIs like getRemoteUser, getCallerPrincipal, getUserPrincipal when using Custom User Registry.
 
-ignoreCustomCacheKey=Ignore the custom cache key in SSO cookie
+ignoreCustomCacheKey=Ignore the custom cache key in the SSO cookie
 ignoreCustomCacheKey.desc=Specifies whether to ignore the custom cache key that is used when looking up the authentication cache.
 
 
