add SHA384 SHA512 ECDSAWithSHA384 ECDSAWithSHA512 for signatureMethodAlgorithm

--- a/dev/com.ibm.ws.security.saml.websso.2.0/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.saml.websso.2.0/resources/OSGI-INF/l10n/metatype.properties
@@ -24,11 +24,15 @@ wantAssertionsSigned=Sign SAML assertion
 wantAssertionsSigned.desc=Indicates a requirement for the <saml:Assertion> elements received by this service provider to contain a Signature element that signs the Assertion.
 
 signatureMethodAlgorithm=Signature algorithm
-signatureMethodAlgorithm.desc=Indicates the required algorithm by this service provider.
+signatureMethodAlgorithm.desc=Indicates the minimum required algorithm by this service provider.
 
 signatureMethodAlgorithm.SHA1=RSA with SHA-1 signature algorithm
 signatureMethodAlgorithm.SHA256=RSA with SHA-256 signature algorithm
+signatureMethodAlgorithm.SHA384=RSA with SHA-384 signature algorithm
+signatureMethodAlgorithm.SHA512=RSA with SHA-512 signature algorithm
 signatureMethodAlgorithm.ECDSAwithSHA256=ECDSA with SHA-256 signature algorithm
+signatureMethodAlgorithm.ECDSAwithSHA384=ECDSA with SHA-384 signature algorithm
+signatureMethodAlgorithm.ECDSAwithSHA512=ECDSA with SHA-512 signature algorithm
 
 authnRequestsSigned=Sign the samlp:AuthnRequest messages
 authnRequestsSigned.desc=Indicates whether the <samlp:AuthnRequest> messages sent by this service provider will be signed.
