Apply ID suggestions
Co-authored-by: Ramkumar <88021034+ramkumar-k-9286@users.noreply.github.com>

--- a/dev/com.ibm.ws.security.saml.websso.2.0/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.security.saml.websso.2.0/resources/OSGI-INF/l10n/metatype.properties
@@ -24,7 +24,7 @@ wantAssertionsSigned=Sign SAML assertion
 wantAssertionsSigned.desc=Indicates a requirement for the <saml:Assertion> elements received by this service provider to contain a Signature element that signs the Assertion.
 
 signatureMethodAlgorithm=Signature algorithm
-signatureMethodAlgorithm.desc=Indicates the minimum required algorithm by this service provider.
+signatureMethodAlgorithm.desc=Indicates the minimum signature algorithm that is required by this service provider.
 
 signatureMethodAlgorithm.SHA1=RSA with SHA-1 signature algorithm
 signatureMethodAlgorithm.SHA256=RSA with SHA-256 signature algorithm
