--- a/dev/com.ibm.ws.request.timing/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/com.ibm.ws.request.timing/resources/OSGI-INF/l10n/metatype.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2019, 2021 IBM Corporation and others.
+# Copyright (c) 2019, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -44,4 +44,4 @@ contextInfoPattern=Context information pattern
 contextInfoPattern.desc=The pattern that determines whether this timing element processes a request. To discover the context information for a request, enable the eventLogging-1.0 service and view the events generated for the request. To add a wildcard, put an asterisk at the end of the pattern. If a context information pattern is used, the request timing configuration must set includeContextInfo to true.
 
 interruptHungRequest=Interrupt hung requests
-interruptHungRequest.desc=Indicates whether a request that is hung is to be interrupted. A value of true causes the requestTiming-1.0 feature to attempt to interrupt the hung request. A value of false allows the request to continue to run.
+interruptHungRequest.desc=Specifies whether a hung request is to be interrupted. When set to true, the requestTiming-1.0 feature attempts to interrupt the hung request. When set to false, the request continues to run. This feature is supported only on IBM JRE 8 and is not supported on IBM Semeru 8.
