--- a/dev/io.openliberty.mcp.internal/resources/OSGI-INF/l10n/metatype.properties
+++ b/dev/io.openliberty.mcp.internal/resources/OSGI-INF/l10n/metatype.properties
@@ -1,5 +1,5 @@
-mcpServerConfig.name=MCP Server Configuration
-mcpServerConfig.description=Configure the MCP Server feature.
+mcpServer.name=Model Context Protocol (MCP) Server
+mcpServer.description=Configure the MCP Server feature.
 
-stateless.name=Stateless Mode
-stateless.description=Stateless mode disables session tracking. This allows for easier clustering, without the load balancer needing to ensure that each session is served by a single backend server. However, it also disables MCP features which rely on session tracking or linking separate HTTP requests together, such as cancelling a tool call.
+stateless.name=Stateless mode
+stateless.description=Stateless mode disables session tracking. This disabling enables easier clustering because the load balancer does not need to ensure that each session is served by a single backend server. However, it also disables MCP features that rely on session tracking or linking separate HTTP requests together, such as canceling a tool call
