Add missing translations for 25.0.0.12

--- a/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_it.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_it.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2023 IBM Corporation and others.
+# Copyright (c) 2023, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=La specifica Jakarta Bean Validation 3.1 fornisce un modello basato sulle annotazioni per la convalida dei JavaBeans.  Pu\u00f2 essere utilizzata per dichiarare e garantire l'integrit\u00e0 dei dati mentre viaggiano attraverso un'applicazione. Questa funzione \u00e8 sviluppata su Hibernate Validator Engine.
+description=La specifica Jakarta Validation 3.1 fornisce un modello basato sulle annotazioni per la validazione di JavaBeans. Pu\u00f2 essere utilizzata per dichiarare e garantire l'integrit\u00e0 dei dati mentre viaggiano attraverso un'applicazione. Questa funzione \u00e8 sviluppata su Hibernate Validator Engine.
