--- a/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_pl.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_pl.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2023 IBM Corporation and others.
+# Copyright (c) 2023, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Specyfikacja Jakarta Bean Validation 3.1 udost\u0119pnia oparty na adnotacjach model sprawdzania poprawno\u015bci komponent\u00f3w JavaBeans.  Mo\u017cna jej u\u017cy\u0107 do asercji i zachowania integralno\u015bci danych w czasie przej\u015bcia przez aplikacj\u0119. Ten sk\u0142adnik jest oparty na mechanizmie Hibernate Validator Engine.
+description=Specyfikacja Jakarta Validation 3.1 zapewnia oparty na adnotacjach model walidacji JavaBeans. Mo\u017cna jej u\u017cy\u0107 do asercji i zachowania integralno\u015bci danych w czasie przej\u015bcia przez aplikacj\u0119. Ten sk\u0142adnik jest oparty na mechanizmie Hibernate Validator Engine.
