--- a/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_cs.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_cs.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2023 IBM Corporation and others.
+# Copyright (c) 2023, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Specifikace Jakarta Bean Validation 3.1 poskytuje model zalo\u017een\u00fd na anotaci pro ov\u011b\u0159en\u00ed objekt\u016f JavaBeans.  Lze ji pou\u017e\u00edt k deklarov\u00e1n\u00ed a \u00fadr\u017eb\u011b integrity dat, proto\u017ee proch\u00e1z\u00ed p\u0159es aplikaci. Tato funkce je postavena na Hibernate Validator Engine.
+description=Specifikace Jakarta Validation 3.1 poskytuje model zalo\u017een\u00fd na anotac\u00edch pro validaci JavaBeans. Lze ji pou\u017e\u00edt k deklarov\u00e1n\u00ed a \u00fadr\u017eb\u011b integrity dat, proto\u017ee proch\u00e1z\u00ed p\u0159es aplikaci. Tato funkce je postavena na Hibernate Validator Engine.
