--- a/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_de.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_de.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2023 IBM Corporation and others.
+# Copyright (c) 2023, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Die Spezifikation Jakarta Bean Validation 3.1 stellt ein annotationsbasiertes Modell f\u00fcr die Validierung von JavaBeans bereit.  Sie kann verwendet werden, um die Integrit\u00e4t von Daten auf ihrem Weg durch eine Anwendung zuzusichern und zu erhalten. Dieses Feature basiert auf der Hibernate Validator Engine.
+description=Die Spezifikation der Jakarta-Validierung 3.1 bietet ein annotationsbasiertes Modell f\u00fcr die Validierung von JavaBeans. Sie kann verwendet werden, um die Integrit\u00e4t von Daten auf ihrem Weg durch eine Anwendung zuzusichern und zu erhalten. Dieses Feature basiert auf der Hibernate Validator Engine.
