--- a/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_es.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_es.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2023 IBM Corporation and others.
+# Copyright (c) 2023, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=La especificaci\u00f3n 3.1 de Jakarta Bean Validation proporciona un modelo basado en anotaciones para validar JavaBeans.  Puede utilizarse para certificar y mantener la integridad de los datos cuando viajan por una aplicaci\u00f3n. Esta caracter\u00edstica se basa en Hibernate Validator Engine.
+description=La especificaci\u00f3n Jakarta Validation 3.1 proporciona un modelo basado en anotaciones para validar JavaBeans. Puede utilizarse para certificar y mantener la integridad de los datos cuando viajan por una aplicaci\u00f3n. Esta caracter\u00edstica se basa en Hibernate Validator Engine.
