--- a/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_fr.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_fr.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2023 IBM Corporation and others.
+# Copyright (c) 2023, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=La sp\u00e9cification Jakarta Bean Validation 3.1 fournit un mod\u00e8le bas\u00e9 sur les annotations pour la validation des JavaBeans.  Il peut \u00eatre utilis\u00e9 pour promouvoir et maintenir l'int\u00e9grit\u00e9 des donn\u00e9es lorsqu'elles transitent\ndans une application. Cette fonction repose sur Hibernate Validator Engine.
+description=La sp\u00e9cification Jakarta Validation 3.1 fournit un mod\u00e8le bas\u00e9 sur les annotations pour la validation de JavaBeans. Il peut \u00eatre utilis\u00e9 pour promouvoir et maintenir l'int\u00e9grit\u00e9 des donn\u00e9es lorsqu'elles transitent\ndans une application. Cette fonction repose sur Hibernate Validator Engine.
