--- a/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_hu.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_hu.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2023 IBM Corporation and others.
+# Copyright (c) 2023, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=A Jakarta Bean Validation 3.1 specifik\u00e1ci\u00f3 annot\u00e1ci\u00f3 alap\u00fa modellt biztos\u00edt a JavaBeans \u00e9rv\u00e9nyes\u00edt\u00e9shez.  Ellen\u0151rizhet\u0151 \u00e9s fenntarthat\u00f3 vele az adatok integrit\u00e1sa, ahogy azok egy alkalmaz\u00e1son kereszt\u00fcl haladnak. Ez a szolg\u00e1ltat\u00e1s a Hibernate Validator Engine rendszerre \u00e9p\u00fcl.
+description=A Jakarta Validation 3.1 specifik\u00e1ci\u00f3 egy megjegyz\u00e9seken alapul\u00f3 modellt biztos\u00edt a JavaBeans \u00e9rv\u00e9nyes\u00edt\u00e9s\u00e9hez. Ellen\u0151rizhet\u0151 \u00e9s fenntarthat\u00f3 vele az adatok integrit\u00e1sa, ahogy azok egy alkalmaz\u00e1son kereszt\u00fcl haladnak. Ez a szolg\u00e1ltat\u00e1s a Hibernate Validator Engine rendszerre \u00e9p\u00fcl.
