--- a/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_ja.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_ja.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2023 IBM Corporation and others.
+# Copyright (c) 2023, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Jakarta Bean Validation 3.1 \u4ed5\u69d8\u306f\u3001JavaBeans\u3092\u691c\u8a3c\u3059\u308b\u305f\u3081\u306e\u30a2\u30ce\u30c6\u30fc\u30b7\u30e7\u30f3\u30fb\u30d9\u30fc\u30b9\u306e\u30e2\u30c7\u30eb\u3092\u63d0\u4f9b\u3057\u307e\u3059\u3002  \u3053\u308c\u3092\u4f7f\u7528\u3057\u3066\u3001\u30c7\u30fc\u30bf\u304c\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u4e2d\u3092\u901a\u904e\u3059\u308b\u3068\u304d\u306b\u30c7\u30fc\u30bf\u306e\u6574\u5408\u6027\u3092\u8868\u660e\u304a\u3088\u3073\u7dad\u6301\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002 \u3053\u306e\u30d5\u30a3\u30fc\u30c1\u30e3\u30fc\u306f Hibernate Validator Engine \u3092\u57fa\u76e4\u3068\u3057\u3066\u69cb\u7bc9\u3055\u308c\u3066\u3044\u307e\u3059\u3002
+description=Jakarta Validation 3.1 \u4ed5\u69d8\u306f\u3001 JavaBeans \u3092\u691c\u8a3c\u3059\u308b\u305f\u3081\u306e\u6ce8\u91c8\u30d9\u30fc\u30b9\u306e\u30e2\u30c7\u30eb\u3092\u63d0\u4f9b\u3059\u308b\u3002 \u3053\u308c\u3092\u4f7f\u7528\u3057\u3066\u3001\u30c7\u30fc\u30bf\u304c\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u4e2d\u3092\u901a\u904e\u3059\u308b\u3068\u304d\u306b\u30c7\u30fc\u30bf\u306e\u6574\u5408\u6027\u3092\u8868\u660e\u304a\u3088\u3073\u7dad\u6301\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002 \u3053\u306e\u30d5\u30a3\u30fc\u30c1\u30e3\u30fc\u306f Hibernate Validator Engine \u3092\u57fa\u76e4\u3068\u3057\u3066\u69cb\u7bc9\u3055\u308c\u3066\u3044\u307e\u3059\u3002
