--- a/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_ko.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_ko.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2023 IBM Corporation and others.
+# Copyright (c) 2023, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Jakarta Bean \uc720\ud6a8\uc131 \uac80\uc99d 3.1 \uc2a4\ud399\uc740 JavaBeans \uc720\ud6a8\uc131 \uac80\uc99d\uc744 \uc704\ud55c \uc5b4\ub178\ud14c\uc774\uc158 \uae30\ubc18 \ubaa8\ub378\uc744 \uc81c\uacf5\ud569\ub2c8\ub2e4.  \uc774\ub294 \uc560\ud50c\ub9ac\ucf00\uc774\uc158\uc744 \ud1b5\ud574 \uc774\ub3d9\ud560 \ub54c \ub370\uc774\ud130\uc758 \ubb34\uacb0\uc131\uc744 \ubcf4\uc7a5\ud558\uace0 \uc774\ub97c \uc720\uc9c0\ud558\ub294 \ub370 \uc0ac\uc6a9\ud560 \uc218 \uc788\uc2b5\ub2c8\ub2e4. \uc774 \uae30\ub2a5\uc740 Hibernate Validator Engine\uc5d0 \ube4c\ub4dc\ub429\ub2c8\ub2e4.
+description=\uc790\uce74\ub974\ud0c0 \uc720\ud6a8\uc131 \uac80\uc0ac 3.1 \uc0ac\uc591\uc740 JavaBeans \uc758 \uc720\ud6a8\uc131 \uac80\uc0ac\ub97c \uc704\ud55c \uc5b4\ub178\ud14c\uc774\uc158 \uae30\ubc18 \ubaa8\ub378\uc744 \uc81c\uacf5\ud569\ub2c8\ub2e4. \uc774\ub294 \uc560\ud50c\ub9ac\ucf00\uc774\uc158\uc744 \ud1b5\ud574 \uc774\ub3d9\ud560 \ub54c \ub370\uc774\ud130\uc758 \ubb34\uacb0\uc131\uc744 \ubcf4\uc7a5\ud558\uace0 \uc774\ub97c \uc720\uc9c0\ud558\ub294 \ub370 \uc0ac\uc6a9\ud560 \uc218 \uc788\uc2b5\ub2c8\ub2e4. \uc774 \uae30\ub2a5\uc740 Hibernate Validator Engine\uc5d0 \ube4c\ub4dc\ub429\ub2c8\ub2e4.
