--- a/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_pt_BR.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_pt_BR.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2023 IBM Corporation and others.
+# Copyright (c) 2023, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=A especifica\u00e7\u00e3o Jakarta Bean Validation 3.1 fornece um modelo baseado em anota\u00e7\u00e3o para validar JavaBeans.  Ela pode ser usada para declarar e manter a integridade dos dados enquanto passa por um aplicativo. Este recurso \u00e9 constru\u00eddo sobre o Hibernate Validator Engine.
+description=A especifica\u00e7\u00e3o Jakarta Validation 3.1 fornece um modelo baseado em anota\u00e7\u00f5es para validar JavaBeans. Ela pode ser usada para declarar e manter a integridade dos dados enquanto passa por um aplicativo. Este recurso \u00e9 constru\u00eddo sobre o Hibernate Validator Engine.
