--- a/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_ro.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_ro.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2023 IBM Corporation and others.
+# Copyright (c) 2023, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Specifica\u021bia Jakarta Bean Validation 3.1 ofer\u0103 un model bazat pe adnotare pentru validarea JavaBeans.  Poate fi utilizat pentru a impune \u015fi men\u0163ine integritatea datelor pe m\u0103sur\u0103 ce trec printr-o aplica\u0163ie. Aceast\u0103 caracteristic\u0103 este construit\u0103 pe Hibernate Validator Engine.
+description=Specifica\u021bia Jakarta Validation 3.1 ofer\u0103 un model bazat pe adnot\u0103ri pentru validarea JavaBeans. Poate fi utilizat pentru a impune \u015fi men\u0163ine integritatea datelor pe m\u0103sur\u0103 ce trec printr-o aplica\u0163ie. Aceast\u0103 caracteristic\u0103 este construit\u0103 pe Hibernate Validator Engine.
