--- a/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_zh_TW.properties
+++ b/dev/com.ibm.websphere.appserver.features/visibility/public/validation-3.1/resources/l10n/io.openliberty.beanValidation-3.1_zh_TW.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2023 IBM Corporation and others.
+# Copyright (c) 2023, 2025 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License 2.0
 # which accompanies this distribution, and is available at
@@ -13,4 +13,4 @@
 #NLS_MESSAGEFORMAT_NONE
 #
 
-description=Jakarta Bean \u9a57\u8b49 3.1 \u898f\u683c\u63d0\u4f9b\u7528\u4f86\u9a57\u8b49 JavaBeans \u7684\u8a3b\u91cb\u578b\u6a21\u578b\u3002  \u5728\u905e\u9001\u904e\u61c9\u7528\u7a0b\u5f0f\u6642\uff0c\u5b83\u53ef\u4ee5\u7528\u4f86\u4e3b\u5f35\u53ca\u7dad\u8b77\u8cc7\u6599\u7684\u5b8c\u6574\u6027\u3002 \u9019\u9805\u7279\u6027\u662f\u4ee5 Hibernate Validator Engine \u70ba\u5efa\u7f6e\u57fa\u790e\u3002
+description=Jakarta Validation 3.1 \u898f\u683c\u70ba\u9a57\u8b49 JavaBeans \u63d0\u4f9b\u4e86\u4e00\u500b\u57fa\u65bc\u6ce8\u89e3\u7684\u6a21\u578b\u3002 \u5728\u905e\u9001\u904e\u61c9\u7528\u7a0b\u5f0f\u6642\uff0c\u5b83\u53ef\u4ee5\u7528\u4f86\u4e3b\u5f35\u53ca\u7dad\u8b77\u8cc7\u6599\u7684\u5b8c\u6574\u6027\u3002 \u9019\u9805\u7279\u6027\u662f\u4ee5 Hibernate Validator Engine \u70ba\u5efa\u7f6e\u57fa\u790e\u3002
